@@ -399,6 +399,7 @@ CONFIG_HAVE_LIBM=n
 CONFIG_DEBUG=n
 CONFIG_DEBUG_VERBOSE=n
 CONFIG_DEBUG_SYMBOLS=n
+CONFIG_DEBUG_FS=n
 CONFIG_MM_REGIONS=1
 CONFIG_ARCH_LOWPUTC=y
 CONFIG_RR_INTERVAL=200
@@ -609,6 +610,7 @@ CONFIG_FS_WRITEBUFFER=n
 #   SDIO driver card detection is 100% accurate
 #
 CONFIG_SDIO_DMA=n
+CONFIG_SDIO_XFRDEBUG=n
 CONFIG_MMCSD_MMCSUPPORT=n
 CONFIG_MMCSD_HAVECARDDETECT=n
 
